--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@ img {
 }
 
 body {
-  background-color: #191818;
+  background-color: #333333;
   color: white;
 
 }
@@ -46,11 +46,11 @@ body {
 }
 
 #footer {
-  background-color: #191818;
-  height: 300px;
+  height: 400px;
   position: relative;
   text-align: center;
   margin-top: 400px;
+  padding-bottom: 100px;
   padding-top: 20px;
   color: grey;
   border-top: 0.5px solid rgba(255, 255, 255, .5);
@@ -107,4 +107,33 @@ p.lead {
   left: 20vw;
   z-index: 2;
   background-color: #00bb79;
+}
+a.trailer-links {
+  color: #00bb79;
+  font-weight: lighter;
+  margin-left: 5px;
+}
+
+a.imdb-links {
+  color: #fdcc59;
+  font-weight: lighter;
+  margin-left: 30px;
+}
+
+.notes {
+  color: grey;
+  font-weight: lighter;
+  margin-left: 5px;
+}
+
+.remove-video-button {
+  margin-left: 30px;
+}
+
+.date-video-added-caption {
+  font-size: 0.4rem;
+  color: grey;
+}
+#footer-filler {
+  height: 200px;
 }
