--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,6 +58,12 @@ hr {
   padding-bottom: 100px;
   padding-top: 20px;
   color: grey;
+  line-height: 1.5;
+
+}
+
+.footer-list {
+  line-height: 2;
 }
 
 #main-navbar {
