Add friends and archives block

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,6 +72,10 @@ select.form-control.form-control-lg {
   line-height: 2;
 }
 
+.nav-link {
+  color: white !important;
+}
+
 #main-navbar {
   background-color: red;
 }
