--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,18 +24,17 @@ select.form-control.form-control-lg {
   background-color:black;
   background-size: cover;
   background-position: center;
-  height: 100vh;
   margin-top: -24px;
-  margin-bottom: -50px;
+
 }
 
 .landing-inner {
-  padding-top: 45px;
+  padding-top: 25px;
 }
 
 .dark-overlay {
   background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -60,12 +59,10 @@ select.form-control.form-control-lg {
   height: 650px;
   position: relative;
   text-align: center;
-  padding-top: 100px;
   padding-bottom: 100px;
   padding-top: 20px;
   color: grey;
   line-height: 1.5;
-
 }
 
 .footer-list {
